--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <link rel="manifest" href="/manifest.json" />
+    <meta name="theme-color" content="#ffc700" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Food Market</title>
   </head>
